styles/style.css
/* ... */
/*SMART HOME CONTACT FORM */

.contact__form-blk {
  min-width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--primary-clr-white);
  padding: 5%;
  margin-top: 6.4rem;
}

.form {
  min-width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 2rem;
}

.form__group {
  width: 100%;
  min-height: 5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  column-gap: 1.6rem;
  margin-bottom: 2rem;
}

.form__group label {
  line-height: 2.4;
  font-size: 1.5rem;
  color: var(--primary-clr-black);
}

.form__group input {
  width: 31.5rem;
  height: 4.8rem;
  padding: 2%;
  margin-bottom: 1.6rem;
}

.form__group-textarea {
  margin-bottom: 4rem;
}

.form__textarea {
  max-height: 12rem;
  max-width: 31.5rem;
  min-height: 12rem;
  min-width: 31.5rem;
}

.form__group-blk {
  width: 100%;
  display: flex;
  justify-content: center;
}

.form__submit-btn {
  width: 9rem;
  height: 4rem;
  background-color: var(--primary-clr-green);
  font-weight: bold;
  color: var(--primary-clr-white);
  padding: 1rem 2rem;
  font-size: 1.5rem;
  border: none;
  border-radius: 0.4rem;
  box-shadow: 0.01rem 0.01rem 5rem var(--box-shadow-grey);
}

/* FOOTER */
/*FOOTER-ADDRESS*/

.footer {
  max-width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--primary-clr-white);
}

.footer__address-blk {
  min-width: 100%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 2rem;
}

.address__info {
  max-width: 75%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  align-items: center;
}

.address__heading {
  margin: 4rem 0 1rem;
  font-weight: bold;
  text-align: center;
  font-size: 2rem;
  color: var(--primary-clr-black);
}

.address__txt {
  text-align: center;
  line-height: 3rem;
  color: var(--primary-clr-black);
  font-size: 2rem;
  margin-bottom: 3rem;
}

.address__tel,
.address__email {
  font-weight: bold;
}

.address__tel {
  margin-bottom: 1rem;
}

.address__tel a,
.address__email a {
  color: var(--primary-clr-black);
  font-size: 2rem;
  text-decoration: none;
  font-weight: 500;
}

/* FOOTER NAVIGATION */

.footer__nav-blk {
  width: 100%;
  min-height: 20rem;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--primary-clr-white);
  margin-top: 3.6rem;
}

.nav__info {
  min-width: 80%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.nav__info-heading {
  margin: 2rem 0;
  font-weight: bold;
  text-align: center;
  font-size: 2rem;
  color: var(--primary-clr-black);
}

.nav {
  max-width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  align-items: center;
}

.nav__list {
  list-style: none;
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
  justify-items: center;
  font-size: 2rem;
  color: var(--primary-clr-grey);
  list-style: 4.8rem;
}

.nav__link {
  text-decoration: none;
  color: var(--primary-clr-black);
  cursor: pointer;
  transition: color 0.125s ease-in-out;
}

.nav__link:active {
  color: var(--primary-clr-blue);
}

/* FOOTER ABOUT */
.footer__about-blk {
  width: 100%;
  min-height: 20rem;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--primary-clr-white);
  margin-top: 3.6rem;
}

.about__info {
  min-width: 80%;
  min-height: 25rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.about__info-heading {
  font-weight: bold;
  color: var(--primary-clr-black) !important;
}

.about__info-item {
  margin-bottom: 1rem;
  font-size: 2rem;
  color: var(--primary-clr-grey);
  list-style: 4.8rem;
  cursor: pointer;
}

/* FOOTER SOCIAL */
.footer__social-blk {
  width: 100%;
  min-height: 20rem;
  background-color: var(--primary-clr-white);
  margin-top: 2.4rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.social__info-blk {
  min-width: 100%;
  min-height: 20rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--primary-clr-white);
}

.social__info-heading-blk {
  min-height: 5rem;
  min-width: 50%;
}

.social__info-heading {
  margin: 1.6rem 0;
  font-weight: bold;
  text-align: center;
  font-size: 2rem;
  color: var(--primary-clr-black);
}

.social__info {
  min-width: 50%;
  min-height: 5rem;
  display: grid;
  grid-template-columns: 5rem 15rem;
  align-items: center;
  justify-content: center;
  margin-left: 1rem;
}

.social__img {
  margin: 0 2rem;
}

.social__txt {
  font-size: 2rem;
  color: var(--primary-clr-grey);
  margin-left: 2rem;
  cursor: pointer;
}

/* FOOTER COPYRIGHT */
.footer__copyright-blk {
  min-width: 100%;
  min-height: 15rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--primary-clr-white);
  margin-top: 3rem;
}

.copyright__info {
  min-width: 100%;
  min-height: 10rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--primary-clr-white);
  line-height: 2.8rem;
}

.copyright__txt {
  color: var(--primary-clr-black);
  vertical-align: bottom;
}
/* ... */

